# ai-memory-gym

./: .gitignore  ENHANCEMENT_SUGGESTIONS.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: __init__.py  llm.py  prompts.py  rule_llm.py  runner.py
app/api/: main.py
app/ui/: run_loader.py  streamlit_app.py  styles.css
bench/: __init__.py  artifacts.py  experiment_config.py  logging_utils.py  metrics.py  metrics_v2.py  runner.py  schemas.py  suite_runner.py
memory/: __init__.py  base.py  consolidation.py  embeddings.py  episodic.py  policies.py  procedural.py  scoring.py  semantic.py  working.py
scripts/: run_api.sh  run_suite.sh  run_ui.sh  run_ui_ollama.sh
sim/: __init__.py  base.py  generators.py  scenarios.py  stress.py
tests/: test_benchmark.py  test_memory.py  test_metrics_v2.py  test_stress.py  test_suite_runner.py
