[project]
name = "ai-memory-gym"
version = "2.0.0"
description = "AI Memory Gym V2 — Cognitive Lab: production-grade evaluation for long-term memory"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pytest>=7.4.0",
    "openai>=1.0.0",
    "reportlab>=4.0.0",
    "pyarrow>=14.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "N", "W"]
ignore = ["E501", "E402", "F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
